Add clear route
